--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,9 @@ name = "rust-port"
 version = "0.1.0"
 edition = "2024"
 
+[lib]
+crate-type = ["cdylib"]
+
 [dependencies]
 rand = "0.8"
+wasm-bindgen = "0.2"
