--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+serde-wasm-bindgen = "0.4"
 rand = "0.8"
 wasm-bindgen = "0.2"
+getrandom = { version = "0.2", features = ["js"] }
